# nupic.pyxx-mt

./: CMakeLists.txt  LICENSE  README.md
include/: pyWrapper.h
src/: pyWrapper.cpp
test/: testNupicWrapper.cpp
test/include/: myController.h
test/py/: claTemporal.py  model_params.py  myController.py
test/src/: myController.cpp
